fix(image exif): version 1.0 done for non ie9 browsers.

--- a/client/app/center/center.css
+++ b/client/app/center/center.css
@@ -365,6 +365,9 @@
     -webkit-animation: opacIn-from-0 1s; /* Chrome, Safari, Opera */
     animation: opacIn-from-0 1s;
 }
+.large-thumbnail-parent .fa-comment {
+    display: none;
+}
 .large-thumbnail-full-screen {
     cursor: pointer;
     position: absolute;
